Fixed last trnait not showing

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -12257,5 +12257,6 @@ input:checked + .slider:before {
   .big-logo {
     rotate: 90deg;
     font-size: 50px;
+    letter-spacing: 40px;
   }
 }
